salesforce/force-app/main/default/objects/Lead/fields/Emma_AI_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Emma_AI_Enabled__c</fullName>
    <label>Emma AI Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Emma AI funding assistant control field. Managed by the Sendblue-AI n8n workflows.</description>
    <inlineHelpText>Set/used by the Emma AI assistant. See sendblue-ai repo docs/SALESFORCE-SETUP.md.</inlineHelpText>
</CustomField>