salesforce/force-app/main/default/objects/Lead/fields/Emma_App_Link_Sent__c.field-meta.xml
<CustomField>
    <fullName>Emma_App_Link_Sent__c</fullName>
    <label>Emma App Link Sent</label>
    <type>DateTime</type>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>