salesforce/force-app/main/default/objects/Lead/fields/Emma_Conversation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Emma_Conversation_Stage__c</fullName>
    <label>Emma Conversation Stage</label>
    <type>Text</type>
    <length>60</length>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>