salesforce/force-app/main/default/objects/Lead/fields/Emma_Followup_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Emma_Followup_Attempt__c</fullName>
    <label>Emma Followup Attempt</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>