salesforce/force-app/main/default/objects/Lead/fields/Emma_Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Emma_Followup_Date__c</fullName>
    <label>Emma Followup Date</label>
    <type>DateTime</type>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>