salesforce/force-app/main/default/objects/Lead/fields/Emma_Handoff_Reason__c.field-meta.xml
<CustomField>
    <fullName>Emma_Handoff_Reason__c</fullName>
    <label>Emma Handoff Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>