salesforce/force-app/main/default/objects/Lead/fields/Emma_Last_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Emma_Last_Inbound__c</fullName>
    <label>Emma Last Inbound</label>
    <type>DateTime</type>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>