salesforce/force-app/main/default/objects/Lead/fields/Sendblue_Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>Sendblue_Consent_Source__c</fullName>
    <label>Sendblue Consent Source</label>
    <type>Text</type>
    <length>255</length>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>