salesforce/force-app/main/default/objects/Lead/fields/Sendblue_Consent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sendblue_Consent_Timestamp__c</fullName>
    <label>Sendblue Consent Timestamp</label>
    <type>DateTime</type>
    <description>Emma AI funding assistant field. Managed by the Sendblue-AI n8n workflows.</description>
</CustomField>