salesforce/force-app/main/default/objects/Lead/fields/Sendblue_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Sendblue_Opt_Out__c</fullName>
    <label>Sendblue Opt Out</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Emma AI funding assistant control field. Managed by the Sendblue-AI n8n workflows.</description>
    <inlineHelpText>Set/used by the Emma AI assistant. See sendblue-ai repo docs/SALESFORCE-SETUP.md.</inlineHelpText>
</CustomField>